--- a/src/index.css
+++ b/src/index.css
@@ -83,6 +83,7 @@ body {
   color: var(--text-white);
   line-height: 1.7;
   overflow-x: hidden;
+  width: 100%;
 }
 
 /* Container */
